--- a/WebDev.html
+++ b/WebDev.html
@@ -9,3 +9,33 @@
   
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Informative Webpage</title>
+  </head>
+  <body>
+
+    <h1>Welcome to My Webpage</h1>
+
+    <h2>About Me</h2>
+    <p>
+      I am a web developer passionate about building interactive websites and applications.
+    </p>
+
+    <h3>Projects</h3>
+    <p>
+      I've worked on several full-stack projects using HTML, CSS, JavaScript, and Node.js.
+      You can view some of my work on 
+      <a href="https://github.com/Himanshuj0311" target="_blank">GitHub</a>.
+    </p>
+
+    <h4>Contact</h4>
+    <p>
+      Feel free to reach out to me via email for collaboration or freelance opportunities.
+    </p>
+
+  </body>
+</html>
